<resources>
    <string name="app_name">Cahier de texte</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_blank_fragment1">Hello blank fragment 1</string>

    <!-- TODO: my strings -->
    <string name="heureDeb">Heure début:</string>
    <string name="heureFin">  Heure fin:</string>
    <string name="description">Description du cours:</string>
    <string name="matiere">Matière:</string>
    <string name="cahier">Cahier de texte</string>
    <string name="ajoutmatiere">Etudiants</string>
    <string name="ajoutCour">Professeurs:</string>
    <string name="unite">Unités enseignement</string>
    <string name="creditUE">Crédits</string>
    <string name="responsable">Responsable</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="specialite">Specialite</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="sex">Sexe</string>
    <string name="f">Femme</string>
    <string name="h">Homme</string>
    <string name="em">Email</string>
    <string name="aj">Ajouter</string>
    <string name="title_activity_add__cours">Ajouter Cours</string>
    <string name="title_activity_add_matiere">Ajouter Matière</string>
    <string name="title_activity_add_etudiant">Ajouter Etudiant</string>
    <string name="title_activity_add_professeur">Ajouter Professeur</string>
    <string name="title_activity_add_ue">Add_ue</string>

    <string name="cours">Cours</string>
    <string name="Matiere">Matières</string>
    <string name="ue">Unités enseignement</string>


</resources>
