<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_http"

            android:title="@string/cours"
            android:textStyle="bold"/>
  
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_code"
            android:title="@string/Matiere" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_clipboard"
            android:title="@string/ue" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_studen"
                android:title="Etudians" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_instru"
                android:title="Professeurs" />


        </menu>
    </item>

    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="A propos" />

</menu>
