<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sow_a.cahierdetexte.ajouts.Add_etudiant"
    tools:showIn="@layout/activity_add_etudiant">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/ne1"
            android:layout_width="match_parent"
            android:layout_height="530dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:layout_toLeftOf="@+id/radioGroup2"
                android:labelFor="@+id/editText1"
                android:text="@string/nom"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:background="@drawable/round_edit"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView2"
                android:hint="taper votre nom"
                android:ems="10"

                android:inputType="textPersonName">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="19dp"
                android:labelFor="@+id/editText2"
                android:text="@string/prenom"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:background="@drawable/round_edit"
                android:hint="taper votre prenom"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="19dp"
                android:labelFor="@+id/editText3"
                android:text="@string/telephone"
                android:textColor="#C03000"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:background="@drawable/round_edit"
                android:hint="taper votre numéro tel"
                android:ems="10"
                android:inputType="number" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView2"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="29dp"
                android:text="@string/sex"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/f" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="19dp"
                android:labelFor="@+id/editText4"
                android:text="@string/em"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:background="@drawable/round_edit"
                android:hint="taper votre email"
                android:ems="10"
                android:inputType="textEmailAddress" />


            <Button
                android:id="@+id/ajou"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/aj"
                android:background="@drawable/round_edit1"
                android:layout_below="@+id/editText4"
                android:layout_toEndOf="@+id/textView3"
                android:layout_marginTop="28dp" />


        </RelativeLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>
