<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sow_a.cahierdetexte.Etudiant_Fragment">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#495CFF" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="jhgjhj"
            android:textColor="#080004"
            android:textSize="27sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_below="@+id/linearLayout1" >

        <RelativeLayout
            android:id="@+id/ne1"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:layout_toLeftOf="@+id/radioGroup2"
                android:text="@string/nom"
                android:labelFor="@+id/editText1"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView2"
                android:background="#FCFAE1"
                android:ems="10"

                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="19dp"
                android:text="@string/prenom"
                android:labelFor="@+id/editText2"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:background="#FCFAE1"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="19dp"
                android:text="@string/telephone"
                android:labelFor="@+id/editText3"
                android:textColor="#C03000"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:background="#FCFAE1"
                android:inputType="number" />






            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView2"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="29dp"
                android:text="@string/sex"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/f" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/radioGroup2"
                android:layout_marginTop="18dp"
                android:text="@string/em"
                android:labelFor="@+id/editText4"
                android:textColor="#C03000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:background="#FCFAE1"
                android:inputType="textEmailAddress" />






            <Button
                android:id="@+id/ajou"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:layout_alignRight="@+id/editText1"
                android:text="@string/aj" />







        </RelativeLayout>


    </ScrollView>



</RelativeLayout>
