<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sow_a.cahierdetexte.fragments.Prof_Fragment">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/nom"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nomProf" />

    <EditText
        android:id="@+id/nomProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/prenom"
        android:textSize="25dp"
        android:layout_below="@+id/nomProf"
        android:layout_alignStart="@+id/prenomProf" />

    <EditText
        android:id="@+id/prenomProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nomProf"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/specialite"
        android:textSize="25dp"
        android:layout_below="@+id/prenomProf"
        android:layout_alignStart="@+id/emailPr" />

    <EditText
        android:id="@+id/specialite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/prenomProf"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <Button
        android:id="@+id/addProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/specialite"
        android:layout_marginTop="22dp"
        android:text="@string/email"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/emailPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addProf"
        android:layout_below="@+id/textView17"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
</RelativeLayout>
