<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sow_a.cahierdetexte.fragments.UE_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="328dp"
        android:layout_height="25dp"
        android:text="@string/unite"
        android:textSize="25dp"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/unite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:textSize="25dp"
        android:text="@string/creditUE"
        android:layout_below="@+id/unite"
        android:layout_alignStart="@+id/cr" />

    <EditText
        android:id="@+id/cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/unite" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/responsable"
        android:layout_below="@+id/cr"
        android:layout_alignStart="@+id/cr"
        android:layout_marginTop="41dp" />

    <Spinner
        android:id="@+id/spinnerResp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/cr" />

    <Button
        android:id="@+id/addEU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="52dp"
        android:text="Button"
        android:layout_below="@+id/spinnerResp"
        android:layout_toEndOf="@+id/textView13" />

    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
