<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sow_a.cahierdetexte.ajouts.Add_professeur"
    tools:showIn="@layout/activity_add_professeur">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/ne1"
            android:layout_width="380dp"
            android:layout_height="495dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:labelFor="@+id/editText1"
                android:text="@string/nom"
                android:textColor="#C03000"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/editText1" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="#FCFAE1"
                android:ems="10"

                android:inputType="textPersonName"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView7">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:labelFor="@+id/editText2"
                android:text="@string/prenom"
                android:textColor="#C03000"
                android:textSize="20sp"
                android:layout_below="@+id/editText1"
                android:layout_alignStart="@+id/editText2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="#FCFAE1"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/editText1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:labelFor="@+id/editText3"
                android:text="@string/telephone"
                android:textColor="#C03000"
                android:textSize="20sp"
                android:layout_below="@+id/editText2"
                android:layout_alignStart="@+id/editText2" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:background="#FCFAE1"
                android:ems="10"
                android:inputType="number" />






            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@+id/editText4"
                android:text="@string/em"
                android:textColor="#C03000"
                android:textSize="20sp"
                android:layout_below="@+id/editText3"
                android:layout_alignStart="@+id/editText4" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="#FCFAE1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/textView6"
                android:layout_alignStart="@+id/editText3" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/editText4"
                android:text="specialité:"
                android:textColor="#C03000"
                android:textSize="20sp"
                android:layout_below="@+id/editText4"
                android:layout_alignParentStart="true"
                android:layout_marginStart="96dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="#FCFAE1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/textView7"
                android:layout_alignEnd="@+id/ajou" />


            <Button
                android:id="@+id/ajou"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/editText1"
                android:layout_marginTop="20dp"
                android:text="@string/aj" />


        </RelativeLayout>

    </ScrollView>>


</RelativeLayout>
