<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sow_a.cahierdetexte.ajouts.Add_Cours"
    tools:showIn="@layout/activity_add__cours"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ne1"
            android:layout_width="368dp"
            android:layout_height="520dp"
            android:orientation="horizontal"
           >

            <TimePicker
                android:id="@+id/timePicker4"
                android:layout_width="150dp"
                android:background="@color/grille"
                android:layout_height="100dp"
                android:timePickerMode="spinner"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/spinner4"
                android:layout_alignStart="@+id/spinner4"
                android:layout_marginStart="13dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:text="@string/heureDeb"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_alignBottom="@+id/timePicker4"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="35dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView9"
                android:layout_marginTop="34dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/matiere"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="17dp" />

            <TimePicker
                android:id="@+id/timePicker2"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:timePickerMode="spinner"
                android:layout_centerHorizontal="true"
                android:numbersSelectorColor="@color/cardview_shadow_end_color"
                android:background="@color/grille"
                android:layout_below="@+id/timePicker4"
                android:layout_alignStart="@+id/timePicker4"
                android:layout_marginTop="11dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heureFin"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_above="@+id/textView11"
                android:layout_alignStart="@+id/textView9"
                android:layout_marginBottom="33dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20dp"
                android:layout_below="@+id/timePicker2"
                android:textStyle="bold"
                android:layout_alignStart="@+id/textView10"
                android:layout_marginTop="13dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:background="@drawable/round_edit"
                android:hint="taper la description du cours"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/textView11"
                android:layout_alignEnd="@+id/timePicker2"
                android:layout_alignStart="@+id/textView11" />

            <Button
                android:id="@+id/buttonCour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ajouter"
                android:background="#40A497"
                android:layout_marginTop="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/editText5" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/spinner"
                android:layout_marginTop="28dp"
                android:text="@string/ajoutCour"
                android:textStyle="bold"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView20"
                android:layout_alignEnd="@+id/spinner"
                android:layout_toEndOf="@+id/textView11"
                android:layout_alignStart="@+id/spinner" />

        </RelativeLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
